# retro_console_pico

./: .gitignore  CMakeLists.txt  libxy_import.cmake  readme.md
libxy/include/: xy.h  xy_drawing.h  xy_hardware.h  xy_math.h  xy_renderer.h  xy_shapes.h
src/: game.h  main.c  readme.md
src/asteroids/: CMakeLists.txt  asteroid.c  asteroid.h  asteroids_game.c  asteroids_game.h  bullet.c  bullet.h  collision.c  collision.h  gui.c  gui.h  input.c  input.h  ship.c  ship.h
src/libcontrollers/: CMakeLists.txt  controller.c  controller.h  controller_nes.c  controller_nes.h
src/pong/: CMakeLists.txt  pong_game.c  pong_game.h
